<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contentdetail_tv_title"
            android:text="Movie Name"
            android:textStyle="italic"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/rate"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/contentdetail_ratingbar"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:progressTint="#FFEB3B"
                android:rating="3.4"
                android:saveEnabled="false"
                android:progress="@integer/config_navAnimTime"
                android:layout_height="wrap_content"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/contentdetail_tv_rating"
                android:text="@string/_10_0"
                android:textSize="30sp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>



        <TextView
            android:id="@+id/contentdetail_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>