<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.DetailTvshowActivity"
    tools:showIn="@layout/activity_detail_tvshow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contentdetailtvshow_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvshow_name"
            android:textSize="28sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/contentdetailtvshow_ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:progress="@integer/config_navAnimTime"
                android:progressTint="#FFEB3B"
                android:rating="3.4"
                android:saveEnabled="false"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/contentdetailtvshow_tv_rating"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/_10_0"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/contentdetailtvshow_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>